src/test/baseman/invalid-usage/case-no-metadata-1/commands/default.ts
import {Command, command} from '../../../../..';

@command()
export default class extends Command {
  execute() {}
}
